--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="habi-r">
             <div class="habi-co">
-                <h3 class="titulo">Habilidades en codigo</h3>
+                <h3 class="titulo">Habilidades en código</h3>
 
                 <div class="habi-box">
                     <div class="habi-content">
